--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
 	"name": "spotify-nxt",
 	"version": "0.0.1",
+	"license": "ISC",
+	"author": "Omkar N",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "vite preview",
-		"prepare": "svelte-kit sync",
-		"lint": "prettier --check --plugin-search-dir=. .",
-		"format": "prettier --write --plugin-search-dir=. ."
+		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
-		"vite": "^2.9.13"
+		"@sveltejs/adapter-auto": "^1.0.0-next.80",
+		"@sveltejs/kit": "^1.0.0-next.504",
+		"dotenv": "^16.0.2",
+		"svelte": "^3.50.1",
+		"vite": "^3.1.3"
 	},
-	"type": "module",
-	"dependencies": {
-		"dotenv": "^16.0.1"
-	}
+	"type": "module"
 }
