--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
 		"svelte": "^3.50.1",
 		"vite": "^3.1.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"date-fns": "^2.30.0",
+		"fast-average-color": "^9.4.0"
+	}
 }
