--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0-next.80",
-		"@sveltejs/kit": "^1.0.0-next.504",
+		"@sveltejs/kit": "1.26.0",
 		"dotenv": "^16.0.2",
 		"svelte": "^3.50.1",
 		"vite": "^3.1.3"
